# CrystalDMI

./: .gitignore  .gitmodules  BUILD.gn  CrystalDMI.cpp  CrystalDMI.dsp  CrystalDMI.rc  CrystalDMI.sln  CrystalDMI.vcxproj  CrystalDMI.vcxproj.filters  CrystalDMIDlg.cpp  CrystalDMIDlg.h  LICENSE.md  OlsApiInit.h  README.md  StdAfx.cpp  StdAfx.h  crystal_dmi.cc  crystal_dmi.h  crystal_dmi.rc  crystal_dmi_dlg.cc  crystal_dmi_dlg.h  debug_args.gn  release_args.gn  resource.h  stdafx.h
old/: CrystalDMI.dsw  CrystalDMI.vcproj  CrystalDMI.vcxproj.filters  CrystalDMI8.sln  ols_api_init.h
res/: CrystalDMI.rc2
